--- a/requirements.txt
+++ b/requirements.txt
@@ -1,112 +1,33 @@
-absl-py==2.2.0
-aiofiles==24.1.0
-altair==5.5.0
-astunparse==1.6.3
-attrs==25.3.0
-beautifulsoup4==4.13.3
-blinker==1.9.0
-cachetools==5.5.2
-certifi==2025.1.31
-charset-normalizer==3.4.1
-click==8.1.8
+asttokens==3.0.0
 colorama==0.4.6
-deepface==0.0.93
-facenet-pytorch==2.6.0
-filelock==3.18.0
-fire==0.7.0
-Flask==3.1.0
-flask-cors==5.0.1
-flatbuffers==25.2.10
-fsspec==2025.3.0
-gast==0.4.0
-gdown==5.2.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.38.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-grpcio==1.71.0
-gunicorn==23.0.0
-h5py==3.13.0
-idna==3.10
-ImageHash==4.3.1
-itsdangerous==2.2.0
-jax==0.4.30
-jaxlib==0.4.30
-Jinja2==3.1.6
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-keras==2.12.0
-libclang==18.1.1
-lz4==4.4.3
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-mdurl==0.1.2
-ml_dtypes==0.5.1
-MouseInfo==0.1.3
-mpmath==1.3.0
-mtcnn==1.0.0
-namex==0.0.8
-narwhals==1.32.0
-networkx==3.4.2
-numpy==1.26.4
-oauthlib==3.2.2
-opencv-python==4.11.0.86
-opt_einsum==3.4.0
-optree==0.14.1
+comm==0.2.2
+debugpy==1.8.13
+decorator==5.2.1
+executing==2.2.0
+ipykernel==6.29.5
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+matplotlib-inline==0.1.7
+mysql==0.0.3
+mysqlclient==2.2.7
+nest-asyncio==1.6.0
 packaging==24.2
-pandas==2.2.3
-pillow==10.2.0
-protobuf==4.25.6
-pyarrow==19.0.1
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-PyAutoGUI==0.9.54
-pydeck==0.9.1
-PyGetWindow==0.0.9
+parso==0.8.4
+platformdirs==4.3.7
+prompt_toolkit==3.0.50
+psutil==7.0.0
+pure_eval==0.2.3
 Pygments==2.19.1
-PyMsgBox==1.0.9
-pyperclip==1.9.0
-PyRect==0.2.0
-PyScreeze==1.0.1
-PySocks==1.7.1
+PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
-pytweening==1.2.0
-pytz==2025.2
-PyWavelets==1.8.0
-referencing==0.36.2
-requests==2.32.3
-requests-oauthlib==2.0.0
-retina-face==0.0.17
-rich==13.9.4
-rpds-py==0.23.1
-rsa==4.9
-scikit-learn==1.6.1
-scipy==1.15.2
+pywin32==310
+pyzmq==26.3.0
 six==1.17.0
-smmap==5.0.2
-soupsieve==2.6
-streamlit==1.44.0
-sympy==1.13.3
-tenacity==9.0.0
-tensorboard==2.12.3
-tensorboard-data-server==0.7.2
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-threadpoolctl==3.6.0
-toml==0.10.2
-torch==2.2.2
-torchvision==0.17.2
+stack-data==0.6.3
 tornado==6.4.2
-tqdm==4.67.1
-typing_extensions==4.12.2
-tzdata==2025.2
-urllib3==2.3.0
-watchdog==6.0.0
-Werkzeug==3.1.3
-wrapt==1.14.1
+traitlets==5.14.3
+typing_extensions==4.13.0
+wcwidth==0.2.13
